--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 
     <img src="https://image.shutterstock.com/image-illustration/number-201-3d-sign-yellow-260nw-1715366776.jpg" alt="">
     <style>
+
+        img{
+            text-align: left;
+            width: auto;
+            height: auto;
+        }
         h1 {
             text-align: center;
             color: red" ;
@@ -29,7 +35,10 @@
             background-color: black;
             color: blanchedalmond;
         }
-
+   footer{
+       text-align: justify;
+       color:black;
+   }
 
     </style>
 </head>
@@ -55,11 +64,11 @@
             </section>
         </article>  
 
-            <script>
+            <script style="background-color: blue; color: crimson;">
                 
 
                 let username = prompt('enter name ');
-                console.log(username);
+                console.log(username );
                 alert(username + " nice name ") ;
                 console.log( + username);
 
