--- a/index.html
+++ b/index.html
@@ -71,26 +71,31 @@
                 console.log(username );
                 alert(username + " nice name ") ;
                 console.log( + username);
+                document.write(`<p style="background-color: blue; color: crimson ;"> Enter name : ${username}  <p>`);
 
 
                 let food = prompt('enter food type do you like ');
                 console.log(food);
                 alert(food + " nice choise ")
                 console.log( + food);
+                document.write(`<p style="background-color: red; color: blue ;"> nice choise : ${food} <p>`);
 
 
                 let userlike = prompt('enter laptop you like ');
                 console.log(userlike + " the best laptop ever ");
                 alert(userlike)
                 console.log(  userlike);
-
+                document.write(`<p style="background-color: wight ; color: red ;"> enter laptop you like  : ${userlike} <p>`);
 
                 let favoritecar = prompt('enter your favorite car ');
                 alert(favoritecar)
                 console.log(favoritecar);
+                document.write(`<p style="background-color: red  ; color: green ;"> enter your favorite car : ${favoritecar} <p>`);
 
           alert("hello  "+username + "  the  " + favoritecar  + "  it's my favorite car to i had one in my home town jordan ")
-            
+
+          document.write(`<p style="background-color: red  ; color: green ;"> hello :  ${username} ${favoritecar} it's my favorite car to i had one in my home town jordan <p>`);
+
             </script>
 
             
